--- a/breast_cancer/notebook.ipynb
+++ b/breast_cancer/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "id": "bd3c374d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "id": "273d5c30",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "id": "ca68db2d",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "id": "86344f4d",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "id": "2d42372f",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "id": "4a767e1a",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "id": "2ef736de",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "id": "2c5e451b",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 96,
    "id": "6e6faa6d",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 97,
    "id": "b9fb490b",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "id": "b1178c97",
    "metadata": {},
    "outputs": [],
@@ -567,8 +567,8 @@
     "    upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
     "    # Count outliers\n",
-    "    num_outliers = ((df[column_name] < lower_bound) | (df[column_name] > upper_bound)).sum()\n",
-    "    print(f'{column_name}: {num_outliers} outliers')\n",
+    "    # num_outliers = ((df[column_name] < lower_bound) | (df[column_name] > upper_bound)).sum()\n",
+    "    # print(f'{column_name}: {num_outliers} outliers')\n",
     "\n",
     "    median_val = df[column_name].median()\n",
     "\n",
@@ -584,58 +584,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 99,
    "id": "cbf78d4a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean radius: 14 outliers\n",
-      "mean texture: 7 outliers\n",
-      "mean perimeter: 13 outliers\n",
-      "mean area: 25 outliers\n",
-      "mean smoothness: 6 outliers\n",
-      "mean compactness: 16 outliers\n",
-      "mean concavity: 18 outliers\n",
-      "mean concave points: 10 outliers\n",
-      "mean symmetry: 15 outliers\n",
-      "mean fractal dimension: 15 outliers\n",
-      "radius error: 38 outliers\n",
-      "texture error: 20 outliers\n",
-      "perimeter error: 38 outliers\n",
-      "area error: 65 outliers\n",
-      "smoothness error: 30 outliers\n",
-      "compactness error: 28 outliers\n",
-      "concavity error: 22 outliers\n",
-      "concave points error: 19 outliers\n",
-      "symmetry error: 27 outliers\n",
-      "fractal dimension error: 28 outliers\n",
-      "worst radius: 17 outliers\n",
-      "worst texture: 5 outliers\n",
-      "worst perimeter: 15 outliers\n",
-      "worst area: 35 outliers\n",
-      "worst smoothness: 7 outliers\n",
-      "worst compactness: 16 outliers\n",
-      "worst concavity: 12 outliers\n",
-      "worst concave points: 0 outliers\n",
-      "worst symmetry: 23 outliers\n",
-      "worst fractal dimension: 24 outliers\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Before</th>\n",
+       "      <th>After</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean radius</th>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean texture</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean perimeter</th>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean area</th>\n",
+       "      <td>25</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean smoothness</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean compactness</th>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean concavity</th>\n",
+       "      <td>18</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean concave points</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean symmetry</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean fractal dimension</th>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>radius error</th>\n",
+       "      <td>38</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>texture error</th>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>perimeter error</th>\n",
+       "      <td>38</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>area error</th>\n",
+       "      <td>65</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoothness error</th>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>compactness error</th>\n",
+       "      <td>28</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concavity error</th>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concave points error</th>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>symmetry error</th>\n",
+       "      <td>27</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fractal dimension error</th>\n",
+       "      <td>28</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst radius</th>\n",
+       "      <td>17</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst texture</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst perimeter</th>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst area</th>\n",
+       "      <td>35</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst smoothness</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst compactness</th>\n",
+       "      <td>16</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst concavity</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst concave points</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst symmetry</th>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worst fractal dimension</th>\n",
+       "      <td>24</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Before  After\n",
+       "mean radius                  14      6\n",
+       "mean texture                  7      2\n",
+       "mean perimeter               13      4\n",
+       "mean area                    25     40\n",
+       "mean smoothness               6      1\n",
+       "mean compactness             16      6\n",
+       "mean concavity               18      8\n",
+       "mean concave points          10      9\n",
+       "mean symmetry                15      1\n",
+       "mean fractal dimension       15      7\n",
+       "radius error                 38     28\n",
+       "texture error                20      5\n",
+       "perimeter error              38     21\n",
+       "area error                   65     52\n",
+       "smoothness error             30      9\n",
+       "compactness error            28      9\n",
+       "concavity error              22     13\n",
+       "concave points error         19      6\n",
+       "symmetry error               27     14\n",
+       "fractal dimension error      28     13\n",
+       "worst radius                 17     21\n",
+       "worst texture                 5      0\n",
+       "worst perimeter              15     13\n",
+       "worst area                   35     48\n",
+       "worst smoothness              7      1\n",
+       "worst compactness            16     12\n",
+       "worst concavity              12      2\n",
+       "worst concave points          0      0\n",
+       "worst symmetry               23     11\n",
+       "worst fractal dimension      24     11"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "def find_number_outliers(df):\n",
+    "    o = {}\n",
+    "    for column_name in df.columns:\n",
+    "        Q1 = df[column_name].quantile(0.25)\n",
+    "        Q3 = df[column_name].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "        lower_bound = Q1 - 1.5 * IQR\n",
+    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "        low_outliers = (df[column_name] < lower_bound).sum()\n",
+    "        high_outliers = (df[column_name] > upper_bound).sum()\n",
+    "        o[column_name] = low_outliers + high_outliers\n",
+    "    return o\n",
+    "\n",
+    "\n",
     "# Optional: copy if you want to keep the original untouched\n",
     "features_without_outliers = features.copy()\n",
     "\n",
     "for col in features_without_outliers.columns:\n",
-    "    features_without_outliers = replace_outliers_with_median(features_without_outliers, col)"
+    "    features_without_outliers = replace_outliers_with_median(features_without_outliers, col)\n",
+    "\n",
+    "a = find_number_outliers(features)\n",
+    "b = find_number_outliers(features_without_outliers)\n",
+    "\n",
+    "pd.DataFrame(index=features.columns, data={'Before': a, 'After': b})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 100,
    "id": "cecb1d89",
    "metadata": {},
    "outputs": [
@@ -660,7 +861,7 @@
     "    axes[index].set_xlabel(colname)\n",
     "    axes[index].set_ylabel(None)\n",
     "\n",
-    "figure.tight_layout()"
+    "plt.tight_layout()"
    ]
   },
   {
@@ -674,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "id": "86966743",
    "metadata": {},
    "outputs": [],
@@ -691,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "id": "a0c9646d",
    "metadata": {},
    "outputs": [
@@ -755,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 103,
    "id": "8b9438c0",
    "metadata": {},
    "outputs": [
@@ -776,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 104,
    "id": "a9cb07c5",
    "metadata": {},
    "outputs": [
@@ -811,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 105,
    "id": "c76a397f",
    "metadata": {},
    "outputs": [
@@ -830,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 106,
    "id": "a56dd2b5",
    "metadata": {},
    "outputs": [
@@ -856,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 107,
    "id": "c7a303a6",
    "metadata": {},
    "outputs": [
@@ -866,7 +1067,7 @@
        "['breast_cancer_logistic_regression.pkl']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
    "id": "1cea9deb",
    "metadata": {},
    "outputs": [
@@ -889,7 +1090,7 @@
        "Text(0.5, 1.0, 'Precision vs Recall')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -923,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 109,
    "id": "2239dab4",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 110,
    "id": "8f7ffa48",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "id": "56cba7ef",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1295,7 @@
        "Text(0.5, 1.0, 'First component vs Second CompAonent')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
