--- a/custom models/custom_linear_regression_1.ipynb
+++ b/custom models/custom_linear_regression_1.ipynb
@@ -487,15 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e7bd54be",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "['/home/mustafa/miniconda3/envs/t2/lib/python313.zip', '/home/mustafa/miniconda3/envs/t2/lib/python3.13', '/home/mustafa/miniconda3/envs/t2/lib/python3.13/lib-dynload', '', '/home/mustafa/miniconda3/envs/t2/lib/python3.13/site-packages']\n"
+      "/home/mustafa/miniconda3/envs/t2/lib/python3.13/site-packages/numpy/_core/getlimits.py:551: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
+      "This warnings indicates broken support for the dtype!\n",
+      "  machar = _get_machar(dtype)\n"
      ]
     }
    ],
