--- a/custom models/logistic_regression/Custom_Logistic_Regression_1.ipynb
+++ b/custom models/logistic_regression/Custom_Logistic_Regression_1.ipynb
@@ -928,7 +928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Full model"
+    "# Full model (without regularization) "
    ]
   },
   {
